# DTU_MLOPS_02476

./: .gitignore  Makefile  README.md  cloudbuild.yaml  data.dvc  pyproject.toml  requirements.txt  requirements_tests.txt
.dvc/: config
.github/workflows/: cml.yml  docker.yml  tests.yml
dockerfiles/: predict.dockerfile  trainer.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
mlops_mnist_classifier/: __init__.py  predict_model.py  train_model.py  train_model_cml.py
mlops_mnist_classifier/data/: dataset.py  make_dataset.py
mlops_mnist_classifier/models/: model.py
notebooks/: create_predict_data.ipynb
tests/: test_data.py  test_model.py  test_training.py
wandb/: latest-run
wandb/run-20240105_140323-8wswujiv/: run-8wswujiv.wandb
wandb/run-20240105_140359-y4gja5fu/: run-y4gja5fu.wandb
wandb/run-20240105_140812-gdioyoin/: run-gdioyoin.wandb
wandb/run-20240105_141417-6f6trfoc/: run-6f6trfoc.wandb
wandb/run-20240105_141553-gljv76gx/: run-gljv76gx.wandb
wandb/run-20240105_141803-ougich6u/: run-ougich6u.wandb
wandb/run-20240108_184152-h5rx40bq/: run-h5rx40bq.wandb
wandb/run-20240108_185418-zqsq77z4/: run-zqsq77z4.wandb
wandb/run-20240108_185433-7id7h9io/: run-7id7h9io.wandb
wandb/run-20240108_185446-2nmfeb9s/: run-2nmfeb9s.wandb
wandb/run-20240108_185539-d29fsno6/: run-d29fsno6.wandb
wandb/run-20240108_185559-fvtqqicn/: run-fvtqqicn.wandb
wandb/run-20240108_185624-b9evldwq/: run-b9evldwq.wandb
wandb/run-20240108_201627-wvfoum68/: run-wvfoum68.wandb
wandb/run-20240108_201700-wjnv6dyw/: run-wjnv6dyw.wandb
(+83 files in other folders)
